Made install target copy files to the plugin directory in $(HOME)

--- a/configure.ac
+++ b/configure.ac
@@ -3,5 +3,9 @@ AC_CONFIG_SRCDIR([src/main.c])
 AM_INIT_AUTOMAKE
 AC_CONFIG_HEADERS([config.h])
 AC_PROG_CC_STDC
-AC_CONFIG_FILES([Makefile src/Makefile])
+
+plugindir=$HOME/.config/google-chrome/NativeMessagingHosts
+AC_SUBST(plugindir)
+
+AC_CONFIG_FILES([Makefile src/Makefile plugin/se.fluffware.scratch.device.json])
 AC_OUTPUT
