--- a/plugin/se.fluffware.scratch.device.json.in
+++ b/plugin/se.fluffware.scratch.device.json.in
@@ -1,7 +1,7 @@
 {
   "name": "edu.mit.scratch.device",
   "description": "Scratch Device Plugin for Linux",
-  "path": "/home/ksb/projects/scratch_plugin/src/ScratchDeviceHost",
+  "path": "@plugindir@/ScratchDeviceHost",
   "type": "stdio",
   "allowed_origins": [
       "chrome-extension://clmabinlolakdafkoajkfjjengcdmnpm/",
