--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,7 +3,7 @@ SUBDIRS=
 AM_CFLAGS = 
 
 noinst_PROGRAMS = 
-bin_PROGRAMS = ScratchDeviceHost
+plugin_PROGRAMS = ScratchDeviceHost
 
 ScratchDeviceHost_SOURCES = main.c \
 json_parse.c json_parse.h \
@@ -11,3 +11,5 @@ serial.c serial.h \
 debug.h
 
 ScratchDeviceHost_LDADD=
+
+plugin_DATA=$(top_srcdir)/plugin/se.fluffware.scratch.device.json
