Separated OS indpendant code from OS dependant

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,10 +5,13 @@ plugindir = @plugindir@
 noinst_PROGRAMS = 
 plugin_PROGRAMS = ScratchDeviceHost
 
-ScratchDeviceHost_SOURCES = main.c \
+ScratchDeviceHost_SOURCES = main_unix.c \
 json_parse.c json_parse.h \
-serial.c serial.h \
+serial.h \
+serial_unix.c serial_unix.h \
 config_file.c config_file.h \
+native_message.c native_message.h \
+scratch_protocol.c scratch_protocol.h \
 debug.h
 
 ScratchDeviceHost_LDADD=
